--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+h1 {
+    color : darkcyan ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 250%;
+}
+
+h2, h3 {
+    color: rgb(0, 226, 19);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+
+}
+
+body {
+    margin : 2em;
+}
+
+body , input[text], button{
+    color : #888;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.badge {
+    background-color: gold;
+}
+
